dark mode fix

--- a/DARK/libraryroot.custom.css
+++ b/DARK/libraryroot.custom.css
@@ -139,7 +139,7 @@
   --GREEN4: #94be60;
   --GREEN2: #22d12b;
   --BLUE: #1181d2;
-  --BLUE2: #285d83;
+  --BLUE2: #0B88E1;
   --REMOVECOLLECTIONXSTROKE: #9e9e9e;
   --INACTIVETOGGLE: VAR(--GAMENAMERIGHTCLICKBACKGROUNDHOVER);
   --INACTIVETOGGLETEXT: VAR(--BUTTONBORDER);
@@ -310,7 +310,7 @@
   --GAMESTATEDASH: VAR(--ACCENT);
   --RUNNINGGAMENAMECOLOR: VAR(--GREEN);
   --RUNNINGGAMESTATECOLOR: VAR(--GREEN2);
-  --UPDATINGGAMENAMECOLOR: VAR(--BLUE2);
+  --UPDATINGGAMENAMECOLOR: VAR(--ACCENT);
   --UPDATINGGAMENAMEFONTWEIGHT: VAR(--INSTALLEDGAMENAMEFONTWEIGHT);
   --COLLECTIONSLABELFONTWEIGHT: VAR(--INSTALLEDGAMENAMEFONTWEIGHT);
   --COLLECTIONSBORDERRADIUS: var(--BORDERRADIUS);
@@ -363,7 +363,7 @@
   --CONTEXTMENUINSTALLBUTTONHOVER: VAR(--LISTITEMBACKGROUNDHOVER);
   --CHECKMARKPADDING: 2px;
   --CHECKMARK: VAR(--BLACK);
-  --CHECKMARKHOVER: VAR(--WHITE);
+  --CHECKMARKHOVER: VAR(--WHITE1);
   --CHECKMARKBACKGROUND: VAR(--BLUE);
   --CHECKMARKBACKGROUNDHOVER: VAR(--BLUE2);
   --CHECKMARKTOPMARGIN: -1px;
@@ -2212,7 +2212,7 @@ div.NarrowRightPanel .appdetailsplaysection_DetailsSection_1dg8h.appdetailsplays
 }
 
 .gamelistentry_Container_2-O4Z.gamelistentry_CloudOutOfDate_26PT_ {
-  color:var(--BLUE2)!important;
+  color:var(--UPDATINGGAMENAMECOLOR)!important;
 }
 
 .gamelistentry_Container_2-O4Z .gamelistentry_GameListEntryContainer_1vO6B svg:not(.SVGIcon_FriendIcon) {
